Cria Pagina inicial

--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Teste
+<!DOCTYPE html>
+<html lang="pt">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Teste 01</title>
+</head>
+<body>
+    <h1>Teste 01</h1>
+    
+</body>
+</html>
