--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
         for (let ne = 0; ne < 10;ne++)
         {
             let e = {
-                x: canvas.width * Math.random(),
+                x: canvas.width *(1+ 10*Math.random()),
                 ax: 0,
-                vx: 0,
-                y : canvas.height * Math.random(),
+                vx:-20,
+                y : canvas.height *Math.random(),
                 ay : 0,
                 vy : 0,
                 cor: "red",
@@ -108,8 +108,8 @@
         }
         function perseguir(alvo)
         {
-            this.ay = ((alvo.y - this.y)*0.5) - 0.2*this.vy;
-            this.ax = ((alvo.x - this.x)*0.5) - 0.2*this.vx;
+            this.ay = (Math.sign(alvo.y - this.y)*100) - 0.2*this.vy;
+            this.ax = (Math.sign(alvo.x - this.x)*100) - 0.2*this.vx;
         }
         function Fugir(alvo)
         {
