--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
             y : 100,
             ay : 0,
             vy : 0,
+            w: 30,
+            h: 15,
             cor:"white",
             desenhar: desenharElemento,
             mover: MoverElemento,
@@ -39,6 +41,8 @@
                 y : canvas.height *Math.random(),
                 ay : 0,
                 vy : 0,
+                w: 10,
+                h: 10,
                 cor: "red",
                 desenhar: desenharElemento,
                 mover: MoverElemento,
@@ -53,6 +57,8 @@
             y : -1000000000,
             ay : 0,
             vy : 0,
+            w: 15,
+            h: 15,
             cor:"yellow",
             desenhar: desenharElemento,
             mover: MoverElemento,
@@ -77,7 +83,6 @@
             ctx.fillRect(0,0,canvas.width,canvas.height);
 
             p.mover();
-            p.desenhar();
             for (let i = 0; i < sprites.length; i++) 
             {
                 const sprite = sprites[i];
@@ -109,6 +114,8 @@
                     pontos= pontos-2;
                 }
             }
+            p.desenhar();
+
             ctx.fillStyle="green";
             ctx.font ="20px Impact"
             ctx.fillText(pontos,20,20);
@@ -127,7 +134,7 @@
         function desenharElemento()
         {
             ctx.fillStyle=this.cor;
-            ctx.fillRect(this.x,this.y,30,30);
+            ctx.fillRect(this.x,this.y,this.w,this.h);
         }
         function perseguir(alvo)
         {
@@ -145,7 +152,7 @@
         function teclaPressionada(event)
         {
             //Controle de velocidades
-            console.log(event.key);
+            //console.log(event.key);
             switch (event.key) 
             {
                 case "ArrowUp":
@@ -168,7 +175,7 @@
         function teclaSolta(event)
         {
             //Controle de velocidades
-            console.log(event.key);
+            //console.log(event.key);
             switch (event.key) 
             {
                 case "ArrowUp":
@@ -198,8 +205,8 @@
         }
         function colidiram(A,B)
         {
-            return!((A.x>B.x+20)||(A.x+20<B.x)||
-            (A.y>B.y+20)||(A.y+20<B.y))
+            return!((A.x>B.x+B.w)||(A.x+A.w<B.x)||
+            (A.y>B.y+B.h)||(A.y+A.h<B.y))
         
         }
     </script>
