--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             if(t0=== undefined) t0 =t;
             dt=(t-t0)/1000;
             //desenha fundo;
-            ctx.fillStyle="blue";
+            ctx.fillStyle="black";
             ctx.fillRect(0,0,canvas.width,canvas.height);
 
             p.mover();
