Adiciona autor e muda título

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>Teste 01</title>
 </head>
 <body>
-    <h1>Teste 01</h1>
+    <h1>Atividade 2</h1>
     <canvas></canvas>
+    <p>Autor: Adriano Eiterer Oliveira<p>
     <script>
         let canvas = document.querySelector("canvas");
         let ctx = canvas.getContext("2d");
